future proofing by removing inline arrow function, addresses issue with page overflow

--- a/src/styles/Page.css
+++ b/src/styles/Page.css
@@ -4,6 +4,7 @@
     width: 100vw;
     top: 0;
     transition: opacity 0.5s ease-in-out;
+    overflow: scroll;
 }
 
 .page-enter{
